--- a/app/src/main/res/layout/activity_viewpill.xml
+++ b/app/src/main/res/layout/activity_viewpill.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:fitsSystemWindows="true">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:orientation="vertical"
+tools:context=".activities.ViewPillActivity">
+
+<include android:id="@+id/toolbar" layout="@layout/custom_toolbar_layout"/>
 
     <LinearLayout
         android:orientation="vertical"
@@ -42,4 +46,4 @@
         </android.support.design.widget.TextInputLayout>
 
     </LinearLayout>
-</ScrollView>
+</LinearLayout>
