--- a/app/src/main/res/layout/custom_list_view_layout.xml
+++ b/app/src/main/res/layout/custom_list_view_layout.xml
@@ -8,25 +8,42 @@
         android:layout_height="wrap_content">
 
         <RelativeLayout
-            android:layout_margin="5dp"
-            android:layout_width="wrap_content"
+            android:padding="5dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/name"
-                android:text="@string/name_string"
-                android:textSize="17sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:id="@+id/photo"
+                android:layout_margin="5dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:background="@drawable/circle"
+                android:gravity="center"
+                android:textSize="30dp"
+                android:textColor="#FFFF"/>
 
-            <TextView
-                android:id="@+id/profession"
-                android:text="@string/profession_string"
-                android:textSize="14sp"
-                android:layout_below="@+id/name"
+            <RelativeLayout
+                android:layout_toRightOf="@+id/photo"
+                android:layout_margin="15dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content">
 
+                <TextView
+                    android:id="@+id/name"
+                    android:text="@string/name_string"
+                    android:textSize="17sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/profession"
+                    android:text="@string/profession_string"
+                    android:textSize="14sp"
+                    android:layout_below="@+id/name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </RelativeLayout>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
