--- a/app/src/main/res/layout/activity_addpill.xml
+++ b/app/src/main/res/layout/activity_addpill.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:orientation="vertical"
-tools:context=".activities.ViewPillActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".activities.AddPill">
 
-<include android:id="@+id/toolbar" layout="@layout/custom_toolbar_layout"/>
+    <include android:id="@+id/toolbar" layout="@layout/custom_toolbar_layout"/>
 
     <LinearLayout
         android:orientation="vertical"
@@ -28,7 +28,7 @@ tools:context=".activities.ViewPillActivity">
                 android:layout_height="wrap_content"
                 android:inputType="textCapWords"
                 android:hint="Pill Name"
-                android:enabled="false"/>
+                android:enabled="true"/>
         </android.support.design.widget.TextInputLayout>
 
         <!--  Pill Date -->
@@ -42,17 +42,17 @@ tools:context=".activities.ViewPillActivity">
                 android:layout_height="wrap_content"
                 android:inputType="textCapWords"
                 android:hint="Pill Date"
-                android:enabled="false"/>
+                android:enabled="true"/>
         </android.support.design.widget.TextInputLayout>
 
         <android.support.v7.widget.AppCompatButton
-            android:id="@+id/btn_delete"
+            android:id="@+id/btn_add"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
             android:padding="12dp"
-            android:text="Delete"/>
+            android:text="Add"/>
 
     </LinearLayout>
 </LinearLayout>
