--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,17 +10,31 @@
 
     <include android:id="@+id/toolbar" layout="@layout/custom_toolbar_layout"/>
 
-    <android.support.v7.widget.CardView
-        android:layout_margin="10dp"
-        android:elevation="3dp"
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ListView
-            android:id="@+id/custom_list_view"
+        <android.support.v7.widget.CardView
+            android:layout_margin="10dp"
+            android:elevation="3dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent">
 
-    </android.support.v7.widget.CardView>
+            <ListView
+                android:id="@+id/custom_list_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+            android:src="@drawable/baseline_add_black_18dp"
+            android:layout_margin="25dp" />
+
+    </android.support.design.widget.CoordinatorLayout>
 
 </LinearLayout>
