--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval"
-    android:layout_height="20dp"
-    android:layout_width="20dp">
-    <solid android:color="@color/colorAccent" />
-</shape>
+
+    <shape xmlns:android="http://schemas.android.com/apk/res/android"
+        android:shape="oval"
+        android:layout_height="20dp"
+        android:layout_width="20dp">
+        <solid android:color="@color/colorPrimaryDark" />
+    </shape>
