--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,17 +11,42 @@
 
     <include android:id="@+id/toolbar" layout="@layout/custom_toolbar_layout"/>
 
-    <android.support.v7.widget.CardView
-        android:layout_margin="10dp"
-        android:elevation="3dp"
+    <FrameLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="55dp"
+        android:layout_marginBottom="60dp">
 
-        <ListView
-            android:id="@+id/custom_list_view"
+        <android.support.v7.widget.CardView
+            android:layout_margin="10dp"
+            android:elevation="3dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent">
 
-    </android.support.v7.widget.CardView>
+            <ListView
+                android:id="@+id/custom_list_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
 
-</LinearLayout>
+            <android.support.design.widget.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|bottom"
+                android:layout_margin="50dp"
+                android:src="@drawable/ic_add"
+                app:fabSize="normal"
+                app:elevation="8dp"
+                android:id="@+id/add_pill_btn"/>
+
+        </android.support.v7.widget.CardView>
+
+
+    </FrameLayout>
+
+    <include
+        android:id="@+id/bottomNavigation"
+        layout="@layout/custom_bottom_nav_view"/>
+
+</RelativeLayout>
+
