--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,22 @@
     <color name="colorPrimary">#00BCD4</color>
     <color name="colorPrimaryDark">#00BCD4</color>
     <color name="colorAccent">#00BCD4</color>
+
+    <color name="primaryColor">#80deea</color>
+    <color name="primaryLightColor">#b4ffff</color>
+    <color name="primaryDarkColor">#4bacb8</color>
+    <color name="secondaryColor">#00acc1</color>
+    <color name="secondaryLightColor">#5ddef4</color>
+    <color name="secondaryDarkColor">#007c91</color>
+    <color name="primaryTextColor">#000000</color>
+    <color name="secondaryTextColor">#000000</color>
+
+    <color name="DarkDarkColor">#003841</color>
+
+    <color name="red">#A71208</color>
+    <color name="gray1">#D6D6D6</color>
+    <color name="gray2">#9C9C9C</color>
+    <color name="gray3">#5F5F5F</color>
+    <color name="gray4">#302F2F</color>
+    <color name="white">#FFFFFF</color>
 </resources>
