--- a/app/src/main/res/layout/activity_panic_button.xml
+++ b/app/src/main/res/layout/activity_panic_button.xml
@@ -36,7 +36,7 @@
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
             android:layout_gravity="center_horizontal"
-            android:text="If you push the button, an automatic call will be made to your relatives\n(phone number: 628153187)"
+            android:text="If you push the button, an automatic call will be made to your relatives\n(phone number: +34 628153187)"
             android:textColor="@color/gray3"
             android:textSize="18dp"
             android:textAlignment="center"/>
