--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,7 +16,8 @@
     <color name="DarkDarkColor">#003841</color>
 
     <color name="red">#A71208</color>
-    <color name="gray1">#D6D6D6</color>
+    <color name="red2">#E71305</color>
+    <color name="gray1">#E2E2E2</color>
     <color name="gray2">#9C9C9C</color>
     <color name="gray3">#5F5F5F</color>
     <color name="gray4">#302F2F</color>
