--- a/app/src/main/res/layout/activity_addpill.xml
+++ b/app/src/main/res/layout/activity_addpill.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activities.AddPill">
+    tools:context=".activities.AddPillActivity">
 
     <include android:id="@+id/toolbar" layout="@layout/custom_toolbar_layout"/>
 
@@ -42,17 +42,26 @@
                 android:layout_height="wrap_content"
                 android:inputType="textCapWords"
                 android:hint="Pill Date"
-                android:enabled="true"/>
+                android:focusableInTouchMode="false"/>
         </android.support.design.widget.TextInputLayout>
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btn_add"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="6dp"
             android:padding="12dp"
-            android:text="Add"/>
+            android:text="Add"
+            android:textStyle="bold"
+            android:backgroundTint="@color/colorPrimaryDark"/>
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btn_cancel"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:padding="12dp"
+            android:text="Cancel" />
 
     </LinearLayout>
 </LinearLayout>
