--- a/app/src/main/res/layout/activity_viewpill.xml
+++ b/app/src/main/res/layout/activity_viewpill.xml
@@ -49,10 +49,19 @@ tools:context=".activities.ViewPillActivity">
             android:id="@+id/btn_delete"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="6dp"
             android:padding="12dp"
-            android:text="Delete"/>
+            android:text="Delete"
+            android:textStyle="bold"
+            android:backgroundTint="@color/red2"/>
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btn_cancel"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:padding="12dp"
+            android:text="Cancel" />
 
     </LinearLayout>
 </LinearLayout>
